# service/category.go
@@ -2,6 +2,7 @@ package service
 
 import (
 	"getcharzp.cn/define"
+	"getcharzp.cn/helper"
 	"getcharzp.cn/models"
 	"github.com/gin-gonic/gin"
 	"log"
@@ -35,8 +36,8 @@ func GetCategoryList(c *gin.Context) {
 	if err != nil {
 		log.Println("GetCategoryList Error:", err)
 		c.JSON(http.StatusOK, gin.H{
-			"code":    -1,
-			"message": "获取分类列表失败",
+			"code": -1,
+			"msg":  "获取分类列表失败",
 		})
 		return
 	}
@@ -46,5 +47,124 @@ func GetCategoryList(c *gin.Context) {
 			"list":  categoryList,
 			"count": count,
 		},
+	})
+}
+
+// CategoryCreate
+// @Tags 管理员私有方法
+// @Summary 分类创建
+// @Param authorization header string true "authorization"
+// @Param name formData string true "name"
+// @Param parentId formData int false "parentId"
+// @Success 200 {string} json "{"code":"200","data":""}"
+// @Router /category-create [post]
+func CategoryCreate(c *gin.Context) {
+	name := c.PostForm("name")
+	parentId, _ := strconv.Atoi(c.PostForm("parentId"))
+	category := &models.CategoryBasic{
+		Identity: helper.GetUUID(),
+		Name:     name,
+		ParentId: parentId,
+	}
+	err := models.DB.Create(category).Error
+	if err != nil {
+		log.Println("CategoryCreate Error:", err)
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "创建分类失败",
+		})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"code": 200,
+		"msg":  "创建成功",
+	})
+}
+
+// CategoryModify
+// @Tags 管理员私有方法
+// @Summary 分类修改
+// @Param authorization header string true "authorization"
+// @Param identity formData string true "identity"
+// @Param name formData string true "name"
+// @Param parentId formData int false "parentId"
+// @Success 200 {string} json "{"code":"200","data":""}"
+// @Router /category-modify [put]
+func CategoryModify(c *gin.Context) {
+	identity := c.PostForm("identity")
+	name := c.PostForm("name")
+	parentId, _ := strconv.Atoi(c.PostForm("parentId"))
+	if name == "" || identity == "" {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "参数不正确",
+		})
+		return
+	}
+	category := &models.CategoryBasic{
+		Identity: identity,
+		Name:     name,
+		ParentId: parentId,
+	}
+	err := models.DB.Model(new(models.CategoryBasic)).Where("identity = ?", identity).Updates(category).Error
+	if err != nil {
+		log.Println("CategoryModify Error:", err)
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "修改分类失败",
+		})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"code": 200,
+		"msg":  "修改成功",
+	})
+}
+
+// CategoryDelete
+// @Tags 管理员私有方法
+// @Summary 分类删除
+// @Param authorization header string true "authorization"
+// @Param identity query string true "identity"
+// @Success 200 {string} json "{"code":"200","data":""}"
+// @Router /category-delete [delete]
+func CategoryDelete(c *gin.Context) {
+	identity := c.Query("identity")
+	if identity == "" {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "参数不正确",
+		})
+		return
+	}
+	var cnt int64
+	err := models.DB.Model(new(models.ProblemCategory)).Where("category_id = (SELECT id FROM category_basic WHERE identity = ? LIMIT 1)", identity).Count(&cnt).Error
+	if err != nil {
+		log.Println("Get ProblemCategory Error:", err)
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "获取分类关联的问题失败",
+		})
+		return
+	}
+	if cnt > 0 {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "该分类下面已存在问题，不可删除",
+		})
+		return
+	}
+	err = models.DB.Where("identity = ?", identity).Delete(new(models.CategoryBasic)).Error
+	if err != nil {
+		log.Println("Delete CategoryBasic Error:", err)
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "删除失败",
+		})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"code": 200,
+		"msg":  "删除成功",
 	})
 }
